@@ -59,16 +59,24 @@ COM_INSTALLER_MSG_UPDATE_NODESC="No description available for this item."
 COM_INSTALLER_MSG_UPDATE_NOUPDATES="There are no updates available at the moment. Please check again later."
 COM_INSTALLER_MSG_UPDATE_SUCCESS="Updating %s was successful."
 COM_INSTALLER_MSG_UPDATE_UPDATE="Update"
+COM_INSTALLER_MSG_WARNINGS_FILEUPLOADSDISABLED="File uploads disabled"
+COM_INSTALLER_MSG_WARNINGS_FILEUPLOADISDISABLEDDESC="File uploads are required to upload extensions into the installer."
 COM_INSTALLER_MSG_WARNINGFURTHERINFO="Further information on warnings"
-COM_INSTALLER_MSG_WARNINGFURTHERINFODESC="For more information on warnings, see the <a href="_QQ_"http://docs.joomla.org"_QQ_">Joomla! Documentation Site</a>; NOTE: FILL THIS IN MORE SPECIFICALLY"
+COM_INSTALLER_MSG_WARNINGFURTHERINFODESC="For more information on warnings, see the <a href="_QQ_"http://docs.joomla.org"_QQ_">Joomla! Documentation Site</a>"
 COM_INSTALLER_MSG_WARNINGS_JOOMLATMPNOTSET="The Joomla! temporary directory is not set"
 COM_INSTALLER_MSG_WARNINGS_JOOMLATMPNOTSETDESC="The Joomla! temporary directory is where Joomla! copies an extension, extracts the extension and the files are copied into the correct directories. If this configuration is not set in configuration.php ($tmp_path) then you won't be able to upload extensions. Create a directory to enable Joomla! to write to the directory to fix the issue."
 COM_INSTALLER_MSG_WARNINGS_JOOMLATMPNOTWRITEABLE="Joomla temporary directory not writable or does not exist"
 COM_INSTALLER_MSG_WARNINGS_JOOMLATMPNOTWRITEABLEDESC="The Joomla temporary directory is not writeable by the Joomla! instance, or may not exist, which may cause issues when attempting to upload extensions to Joomla!. If you are having issues uploading extensions, make sure the directory defined in your configuration.php exists or check the '%s' and set it to be writeable and see if this fixes the issue."
-COM_INSTALLER_MSG_WARNINGS_LOWMEMORYDESC=""
-COM_INSTALLER_MSG_WARNINGS_LOWMEMORYWARN=""
-COM_INSTALLER_MSG_WARNINGS_MEDMEMORYDESC=""
-COM_INSTALLER_MSG_WARNINGS_MEDMEMORYWARN=""
+COM_INSTALLER_MSG_WARNINGS_LOWMEMORYDESC="Low PHP Memory Limit"
+COM_INSTALLER_MSG_WARNINGS_LOWMEMORYWARN="Your PHP memory limit is set below 8MB which may cause some issues when installing large extensions. Please set your memory limit to at least 16MB."
+COM_INSTALLER_MSG_WARNINGS_MEDMEMORYDESC="Potentially low PHP Memory Limit"
+COM_INSTALLER_MSG_WARNINGS_MEDMEMORYWARN="Your PHP memory limit is set below 16MB which may cause some issues when installing large extensions. Please set your memory limit to at least 16MB."
+COM_INSTALLER_MSG_WARNINGS_SMALLPOSTSIZE="Small PHP maximum POST size"
+COM_INSTALLER_MSG_WARNINGS_SMALLPOSTSIZEDESC="The maximum POST size sets the most amount of data that can be sent via POST to the server. This includes form submissions for articles, media (images, videos) and extensions. This value is less than 2MB which may impact on uploading large extensions. This is set in the php.ini under post_max_size"
+COM_INSTALLER_MSG_WARNINGS_SMALLUPLOADSIZE="Small PHP file upload size"
+COM_INSTALLER_MSG_WARNINGS_SMALLUPLOADSIZEDESC="The maximum file size for uploads is set to less than 2MB which may impact on uploading large extensions."
+COM_INSTALLER_MSG_WARNINGS_UPLOADBIGGERTHANPOST="PHP Upload Size bigger than POST size"
+COM_INSTALLER_MSG_WARNINGS_UPLOADBIGGERTHANPOSTDESC="The value of the upload_max_filesize in the php.ini file is greater than the post_max_size variable. The post_max_size variable will take precedence here and block requests larger than it. This is generally a server misconfiguration when trying to increase upload sizes. Please increase the upload_max_filesize to at least match the post_max_size variable or vice versa"
 COM_INSTALLER_MSG_WARNINGS_NONE="No warnings detected"
 COM_INSTALLER_MSG_WARNINGS_PHPUPLOADNOTSET="The PHP temporary directory is not set"
 COM_INSTALLER_MSG_WARNINGS_PHPUPLOADNOTSETDESC="The PHP temporary directory is the directory that PHP uses to store an uploaded file before Joomla! can access this file. Whilst the directory not being set isn't always a problem, if you are having issues with manifest files not being detected or uploaded files not being detected, setting this in your php.ini file might fix the issue."
